--- a/ymaeda_tools_dGM_check.ipynb
+++ b/ymaeda_tools_dGM_check.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -459,9 +459,10 @@
      "output_type": "stream",
      "text": [
       "d: (12,), G: (12, 2), m: (2,)\n",
+      "dd: (6,), GG: (6, 1), mm: (1,)\n",
       "Calculated:  [-9753019 14237922]\n",
       "Loaded data: [-9753019 14237920]\n",
-      "Sklearn:     [-9753019.63744872+14237922.76443982j]\n"
+      "Cplx. calc.: [-9753019.63744872+14237922.76443982j]\n"
      ]
     }
    ],
@@ -478,7 +479,7 @@
     "G = read_G(base_dir + parent_dir, file_index)\n",
     "GG = Gdbm_to_G(G)\n",
     "\n",
-    "# contents of a single mest_cv file:\n",
+    "# contents of a single m_est.cv file:\n",
     "m = read_mest(base_dir + parent_dir, file_index)\n",
     "mm = mcv_to_m(m)\n",
     "\n",
@@ -488,10 +489,11 @@
     "    return m\n",
     "\n",
     "print(\"d: {}, G: {}, m: {}\".format(d.shape, G.shape, m.shape))\n",
+    "print(\"dd: {}, GG: {}, mm: {}\".format(dd.shape, GG.shape, mm.shape))\n",
     "\n",
     "print(\"Calculated: \", np.array(lstsqinv(G, d)).astype(int))\n",
     "print(\"Loaded data:\", m.astype(int))\n",
-    "print(\"Sklearn:    \", least_squares(GG, dd))\n",
+    "print(\"Cplx. calc.:\", least_squares(GG, dd))\n",
     "\n",
     "# Comments:\n",
     "# Observed seismograms: 2 stations, 3 directions, 2 parts real + imag\n",
