--- a/ymaeda_tools_make_inv_data_check.ipynb
+++ b/ymaeda_tools_make_inv_data_check.ipynb
@@ -181,6 +181,11 @@
     "# g has the structure: [Force direction x Time steps x Ground displacement direction]\n",
     "# e.g. [3 x 121 x 3]\n",
     "\n",
+    "# To perform the spatial derivatives, the Green's functions values at the neighbouring grid points\n",
+    "# must also be measured. For the 1st order central difference method, the grid points to the left\n",
+    "# and right must be measured as well, and the derivative taken by: f'(x) = (f(x+h) - f(x-h))/2h.\n",
+    "# Therefore, for each grid point, there are 8 other grid points of data to load for a total of 9!\n",
+    "\n",
     "G = np.zeros([len(t[0]), 3, len(STATIONS)])\n",
     "\n",
     "for n in range(len(t[0])):\n",
