--- a/Sac_test.ipynb
+++ b/Sac_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,12 +28,13 @@
     "from sac_tools.Sac import Sac\n",
     "\n",
     "# File and directory names of the .sac file as well as the pole-zero file.\n",
-    "base_dir = \"/Volumes/MAC Backup/Final Year Projects/Shinmoedake Data/shinmoedake seismographs/\"\n",
+    "HDD = \"TOSHIBA_HDD\"\n",
+    "base_dir = \"/Volumes/{:s}/Final Year Projects/Shinmoedake Data/shinmoedake seismographs/\".format(HDD)\n",
     "station = \"EV.SMN\"\n",
     "channel = \"wU\"  \n",
     "parent_folder = \"110202/11020220h/\"\n",
     "file_name = os.path.join(base_dir, parent_folder, station + \".\" + channel)\n",
-    "pz_file_name = \"/Volumes/MAC Backup/Final Year Projects/Shinmoedake Data/kirishima_invert/tri120p\"\n",
+    "pz_file_name = \"/Volumes/{:s}/Final Year Projects/Shinmoedake Data/kirishima_invert/tri120p\".format(HDD)\n",
     "\n",
     "# Set the time range for the data.\n",
     "starttime = pd.to_datetime(\"20110202 20:43:40\")\n",
@@ -70,7 +71,7 @@
    ],
    "source": [
     "# Load .sac file containing a long period event.\n",
-    "file_name = \"/Volumes/MAC Backup/Final Year Projects/Shinmoedake Data/shinmoedake seismographs/110201/11020100h\"\n",
+    "file_name = \"/Volumes/{:s}/Final Year Projects/Shinmoedake Data/shinmoedake seismographs/110201/11020100h\".format(HDD)\n",
     "file_name = file_name + \"/\" + station + \".\" + channel\n",
     "\n",
     "# Load .sac file data.\n",
