--- a/ymaeda_tools_dGM_check.ipynb
+++ b/ymaeda_tools_dGM_check.ipynb
@@ -24,8 +24,8 @@
     "F = np.arange(0, df*4096, df) \n",
     "\n",
     "# base directories\n",
-    "base_dir = \"/Volumes/MAC Backup/Final Year Projects/Shinmoedake Data/kirishima_invert/\"\n",
-    "parent_dir = \"inversion_results_dump_new/inversion_result_residuals117/t60_p100/x-10900y-121100z1000/\"\n",
+    "base_dir = \"/Users/ynatsume/jupyter_main/Shinmoedake Data/\"\n",
+    "parent_dir = \"inversion_result_residuals117/t60_p100/x-10900y-121100z1000/\"\n",
     "\n",
     "# target directory\n",
     "target_dir = \"inv_data_dir_supershort_filtered/\"\n",
