--- a/ymaeda_tools_gf_checks.ipynb
+++ b/ymaeda_tools_gf_checks.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "from ymaeda_tools.dft import dft, exifft_cplx\n",
+    "from ymaeda_tools.dft import dft, exidft_cplx\n",
     "from ymaeda_tools.read_stfun import create_timefunc_pow34\n",
     "from ymaeda_tools.read_snapshot import read_snapshot_params, snapshot_stnloc\n",
     "from ymaeda_tools.read_snapshot import snapshot_XYZ, read_snapshot_loc3D_fast, extract_snapshot\n",
@@ -29,7 +29,7 @@
     "F = np.arange(0, df * 4096, df) # frequency full space\n",
     "\n",
     "STATION = \"SMN_UD_SMALL\" # UD (z-direction) impulse to kick start the GF generation\n",
-    "HDD_LOC = \"/Volumes/MAC Backup/Final Year Projects/Shinmoedake Data/EIC_BACKUP/home/natsume/\" \n",
+    "HDD_LOC = \"/Users/ynatsume/jupyter_main/Shinmoedake Data/\" \n",
     "GREENS_FUNCTION = \"pow34\""
    ]
   },
@@ -43,7 +43,7 @@
      "output_type": "stream",
      "text": [
       "pow34 chosen...\n",
-      "Time elapsed: 62.171s\n"
+      "Time elapsed: 0.592s\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
      "text": [
       "(161, 160, 140) (-11800.0, -121495.0, 5.0) (10.0, 10.0, 10.0)\n",
       "90 39 99\n",
-      "Time elapsed: 197.717s\n"
+      "Time elapsed: 6.173s\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 386.692s\n"
+      "Time elapsed: 7.905s\n"
      ]
     }
    ],
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 464.729s\n"
+      "Time elapsed: 9.406s\n"
      ]
     }
    ],
@@ -232,9 +232,9 @@
     "G10 = G1 / FT1\n",
     "G20 = G2 / FT1\n",
     "# iDFT to get the deconvolved signal in time space. Do not forget the 1/dt factor!\n",
-    "g00 = np.real(exifft_cplx(G00)) / (t[2]-t[1])\n",
-    "g10 = np.real(exifft_cplx(G10)) / (t[2]-t[1])\n",
-    "g20 = np.real(exifft_cplx(G20)) / (t[2]-t[1])\n",
+    "g00 = np.real(exidft_cplx(G00)) / (t[2]-t[1])\n",
+    "g10 = np.real(exidft_cplx(G10)) / (t[2]-t[1])\n",
+    "g20 = np.real(exidft_cplx(G20)) / (t[2]-t[1])\n",
     "\n",
     "print(\"Time elapsed: {:.3f}s\".format(time.time()-STARTTIME))"
    ]
