--- a/ymaeda_tools_make_inv_data_check.ipynb
+++ b/ymaeda_tools_make_inv_data_check.ipynb
@@ -9,9 +9,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "119.07s\n",
-      "116.38s\n",
-      "100.73s\n"
+      "5.08s\n",
+      "6.00s\n",
+      "5.56s\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
     "Y = -121100\n",
     "Z = 1000\n",
     "\n",
-    "HDD_LOC = \"/Volumes/MAC Backup/Final Year Projects/Shinmoedake Data/EIC_BACKUP/home/natsume/\" \n",
+    "HDD_LOC = \"/Users/ynatsume/jupyter_main/Shinmoedake Data/\" \n",
     "\n",
     "STATIONS = [\"SMN_EW_SMALL\", \"SMN_NS_SMALL\", \"SMN_UD_SMALL\"]\n",
     "\n",
@@ -196,7 +196,7 @@
     "print(\"np.shape(G):\",np.shape(G)) \n",
     "\n",
     "plt.figure(figsize = (15, 7/3))\n",
-    "plt.plot(t[0], g[0, :, :]) # Note that: G[:, :, 0] == g[0, :, :]\n",
+    "plt.plot(t[0], g[0, :, :]) # Note that: G[:, :, 0] == g[0, :, :] if the transformation is performed correctly\n",
     "plt.plot(t[0], G[:, :, 0], \".\") \n",
     "plt.ylabel(\"{} (m/s)\".format(STATIONS[0]))\n",
     "plt.xlabel(\"Time (s)\")\n",
