--- a/Sac_demo.ipynb
+++ b/Sac_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HDD = \"TOSHIBA_HDD\"\n",
+    "station = \"EV.SMN\"\n",
+    "channel = \"wU\"  \n",
+    "parent_folder = \"110202/11020220h/\"\n",
+    "file_name = \"/Volumes/{:s}/Final Year Projects/Shinmoedake Data/shinmoedake seismographs/\".format(HDD)\n",
+    "file_name = file_name + parent_folder + station + \".\" + channel\n",
+    "pz_file_name = \"/Volumes/{:s}/Final Year Projects/Shinmoedake Data/kirishima_invert/tri120p\".format(HDD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
