--- a/ymaeda_tools_make_inv_data_check.ipynb
+++ b/ymaeda_tools_make_inv_data_check.ipynb
@@ -12,7 +12,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from ymaeda_tools.read_snapshot import read_snapshot_params, snapshot_stnloc, snapshot_XYZ, extract_snapshot\n",
+    "import os\n",
+    "\n",
+    "from ymaeda_tools.read_snapshot import read_snapshot_params, snapshot_loc2idx, snapshot_XYZ, extract_snapshot\n",
     "\n",
     "# This notebook performs checks on the creation of the Green's functions associated with a specific\n",
     "# source location, observation location and direction of motion.\n",
@@ -21,14 +23,37 @@
     "f = np.arange(0, df * 2049, df) # frequency half space\n",
     "F = np.arange(0, df * 4096, df) # frequency full space\n",
     "\n",
-    "# location to measure the Green's function:\n",
+    "dx = 10\n",
+    "dy = 10\n",
+    "dz = 10\n",
+    "\n",
+    "# location to create the inversion Green's function:\n",
     "X = -10900\n",
     "Y = -121100\n",
     "Z = 1000\n",
+    "ooo = np.array([X, Y, Z])\n",
+    "\n",
+    "# However, we do not need the Green's function at the coordinates above. In order to create the inversion\n",
+    "# Green's functions, we need to load the Green's functions at the 8 cells surrounding the point of interest.\n",
+    "mmm = np.array([X - dx, Y - dy, Z - dz])\n",
+    "mmp = np.array([X - dx, Y - dy, Z + dz])\n",
+    "mpm = np.array([X - dx, Y + dy, Z - dz])\n",
+    "mpp = np.array([X - dx, Y + dy, Z + dz])\n",
+    "pmm = np.array([X + dx, Y - dy, Z - dz])\n",
+    "pmp = np.array([X + dx, Y - dy, Z + dz])\n",
+    "ppm = np.array([X + dx, Y + dy, Z - dz])\n",
+    "ppp = np.array([X + dx, Y + dy, Z + dz])\n",
     "\n",
     "#HDD_LOC = \"/Users/ynatsume/jupyter_main/Shinmoedake Data/\" \n",
-    "HDD_LOC = \"/Volumes/TOSHIBA_HDD/Final Year Projects/Shinmoedake Data/EIC_BACKUP/home/natsume/\"\n",
-    "\n",
+    "HDD_LOC = \"/Volumes/TOSHIBA_HDD/Final Year Projects/Shinmoedake Data/EIC_BACKUP/home/natsume/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "STATIONS = [\"SMN_EW_SMALL\", \"SMN_NS_SMALL\", \"SMN_UD_SMALL\"]\n",
     "\n",
     "GREENS_FUNCTION = \"pow34\"\n",
@@ -38,18 +63,15 @@
     "\n",
     "for i, STATION in enumerate(STATIONS):\n",
     "    if GREENS_FUNCTION == 'pow5':\n",
-    "        #print('pow5 chosen...')\n",
     "        snapshot_dir = HDD_LOC + \"GFpow5/\" + STATION + \"/PML/snapshot/\"\n",
     "    elif GREENS_FUNCTION == 'pow34':\n",
-    "        #print('pow34 chosen...')\n",
     "        snapshot_dir = HDD_LOC + \"GFpow34/\" + STATION + \"/PML/snapshot/\"\n",
     "    elif GREENS_FUNCTION == 'cos':\n",
-    "        #print('cos chosen...')\n",
     "        snapshot_dir = HDD_LOC + \"GFcos/\" + STATION + \"/PML/snapshot/\"\n",
     "    \n",
     "    # First of all we need to load the 3 components of the Green's function measured at the wanted location...\n",
     "    start_time = time.time()\n",
-    "    t_tmp, g_tmp, N, x0, dx = extract_snapshot(snapshot_dir, X, Y, Z, return_params = True)\n",
+    "    t_tmp, g_tmp, N, x0, dx = extract_snapshot(snapshot_dir, ooo[0], ooo[1], ooo[2], return_params = True)\n",
     "    print(\"{:.2f}s\".format(time.time() - start_time))\n",
     "    \n",
     "    t.append(t_tmp)\n",
@@ -81,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize = (15, 7))\n",
+    "plt.figure(figsize = (15, 6))\n",
     "plt.subplot(3, 1, 1)\n",
     "plt.plot(t[0], g[0, :, 0], t[0], g[0, :, 1], t[0], g[0, :, 2]) # 3D GF due to SMN_EW force\n",
     "plt.legend([\"x\", \"y\", \"z\"])\n",
@@ -135,7 +157,7 @@
     "# e.g. [121 x 3 x 3]\n",
     "print(\"np.shape(G):\",np.shape(G)) \n",
     "\n",
-    "plt.figure(figsize = (15, 7/3))\n",
+    "plt.figure(figsize = (15, 3))\n",
     "plt.plot(t[0], g[0, :, :]) # Note that: G[:, :, 0] == g[0, :, :] if the transformation is performed correctly\n",
     "plt.plot(t[0], G[:, :, 0], \".\") \n",
     "plt.ylabel(\"{} (m/s)\".format(STATIONS[0]))\n",
@@ -169,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
